# elaratoon

./: CMakeLists.txt  README.md  ess_loader.cpp  ess_loader.h  main.cpp  trimesh_builder.cpp  trimesh_builder.h
scenes/: cornell_box.ess  cylinder.ess  sss_dragon.ess
